k8s/webfinger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webfinger
  labels:
    app: webfinger
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: "50%"
  selector:
    matchLabels:
      app: webfinger
  template:
    metadata:
      name: webfinger
      labels:
        app: webfinger
    spec:
      containers:
        - name: webfinger
          image: nginxinc/nginx-unprivileged:1.28.0@sha256:fb17edf0ea5eeea200ca39312e0aa2d4a443c7d2e979cd4ba02e1ba7725c23b4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: config
              readOnly: true
            - mountPath: /tmp
              name: tmp
          resources:
            requests:
              cpu: 10m
              memory: 48Mi
            limits:
              memory: 64Mi
          livenessProbe:
            httpGet:
              port: http
              path: /healthz
          readinessProbe:
            httpGet:
              port: http
              path: /healthz
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          configMap:
            name: nginx-config
        - name: tmp
          emptyDir:
            medium: Memory
