k8s/webfinger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webfinger
spec:
  selector:
    app: webfinger
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
