k8s/webfinger/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webfinger
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ts.anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: webfinger
          port: 80
  tls:
    secretName: webfinger-cert-tls
    domains:
      - main: ts.anshulg.com
